kubernetes-cluster/manifests/apps/vaultwarden/services.yml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: tools
spec:
  selector:
    app: vaultwarden
  ports:
  - name: vaultwarden
    protocol: TCP
    port: 80
    targetPort: 80
