kubernetes-cluster/manifests/apps/vaultwarden/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vault.appchemy.co.za
    secretName: vaultwarden-tls
  rules:
  - host: vault.appchemy.co.za
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vaultwarden
            port:
              number: 80
---
